Update part 5 latex

--- a/project3.tex
+++ b/project3.tex
@@ -101,7 +101,7 @@ in order to decide whether to classify $x$ as 1 or 0 . Explain, in each case, wh
 Assume $x$ is one review which is a $k$-dimensional vector where $k$ is the total number of unique words in the set.\\
 $\theta_0$ is the bias.\\
 $I_i(x)$ is the $i$th word of input $x$. $I_i(x)$ is either 1 or 0, where 1 means that $i$th word is in review $x$, 0 means that $i$th word is not in review $x$.\\
-$\theta_i$ is $log(P(word_i | positive)) + log(P(positive)) - log(P(word_i | negative)) - log(P(negative))$
+$\theta_i$ is $log(P(word_i | positive))  - log(P(word_i | negative))$
 \clearpage
 
 \section*{Part 6}
