--- a/project3.tex
+++ b/project3.tex
@@ -64,6 +64,7 @@ The top 10 words that predicts positive are:\\
 'ziembicki', 'unites', 'ulu', 'torrance', 'toiling', 'tiegs', 'swope', 'salability', 'rothchild', 'rollergirl'\\
 The top 10 words that predicts negative are:\\
 'zaltar', 'workout', 'unmercifully', 'szwarc', 'stuffing', 'slunk', 'salkinds', 'refugees', 'popeye', 'omegahedron'\\
+Although most of the words does not make sense intuitively to make strong prediction, they showed up in the result because they only appeared in one class. For example, 'ziembicki' is only in positive reviews, 'popeye' is only in negative reviews.
 \clearpage
 
 \section*{Part 4}
@@ -99,14 +100,14 @@ in order to decide whether to classify $x$ as 1 or 0 . Explain, in each case, wh
 
 \paragraph{Answer}
 Assume $x$ is one review which is a $k$-dimensional vector where $k$ is the total number of unique words in the set.\\
-$\theta_0$ is the bias.\\
+$\theta_0 = log(P(positive)) - log(P(negative))$.\\
 $I_i(x)$ is the $i$th word of input $x$. $I_i(x)$ is either 1 or 0, where 1 means that $i$th word is in review $x$, 0 means that $i$th word is not in review $x$.\\
-$\theta_i$ is $log(P(word_i | positive))  - log(P(word_i | negative))$
+$\theta_i = log(P(word_i | positive))  - log(P(word_i | negative))$
 \clearpage
 
 \section*{Part 6}
 \paragraph{Question}
-
+Compare the top 100 $\theta$s that you obtained using Naive Bayes and Logistic Regression.
 \paragraph{Answer}
 
 
