Add average and standard deviation for part 6

--- a/project3.tex
+++ b/project3.tex
@@ -109,6 +109,9 @@ $\theta_i = log(P(word_i | positive))  - log(P(word_i | negative))$
 \paragraph{Question}
 Compare the top 100 $\theta$s that you obtained using Naive Bayes and Logistic Regression.
 \paragraph{Answer}
+The average of $\theta$ from Naive Bayes is 0.176375, with standard deviation 0.125596.\\
+The average of $\theta$ from logistic regression is 0.004004, with standard deviation 0.001090.\\
+
 By comparing the top 100 $\theta$s with corresponding words from Naive Bayes and Logistic Regression, we found that:\\
 
 Common positive words are:\\
